Solution of bugs and duplicity detected by sonar